--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "country-data": "^0.0.31",
     "dayjs": "^1.11.10",
+    "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
